set min-height to modal crop

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2117,6 +2117,10 @@ html, body, .container, .content {
     z-index: 999!important;
 }
 
+.awesome-cropper .modal-body{
+    min-height: 15em;
+}
+
 .awesome-cropper .preview {
     width: 80px;
     background-color: #fff;
