--- a/views/default/header.html
+++ b/views/default/header.html
@@ -70,7 +70,7 @@
 
         <div class="all-projects">
           <a href="#modalAllProjects" data-toggle="modal">
-            <img src="{{=URL('static', 'img/all-projects.png')}}" alt="All Projects" title="All Projects">
+            <img src="{{=URL('static', 'img/all-projects.png')}}" alt="{{=T('All Projects')}}" title="{{=T('All Projects')}}">
             <p>{{=T("All Projects")}}</p>
           </a>
 
