--- a/views/default/header.html
+++ b/views/default/header.html
@@ -100,11 +100,11 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="modalAllProjectsLabel">{{=T('All Projects')}}</h3>
         <div class="modal--all-projects-search">
-          <input type="text" placeholder="{{=T('Search')}}..." /><i class="icon icon-search"></i>
+          <input class="search" type="text" placeholder="{{=T('Search')}}..." /><i class="icon icon-search"></i>
         </div>
       </div>
       <div class="modal-body">
-        <ul>
+        <ul class="list">
 
           {{for i in all_projects:}}
             <li class="project-card">
@@ -119,7 +119,7 @@
                   <img src="{{=URL("static","/img/no-image_project.jpg")}}" alt="{{=i.project_id.name}}">
                 {{ pass }}
                 <div class="project-card--content-title">
-                  <p class="trunc">{{=i.project_id.name}}</p>
+                  <p class="project_name trunc">{{=i.project_id.name}}</p>
                 </div>
               </div>
               <div class="clear"></div>
