--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -216,6 +216,7 @@
             </script>
 
             {{ elif request.function == "projects": }}
+            <script src='{{=URL("static","js/projects-modal.js")}}'></script>
             <script async defer src='{{=URL("static","js/delete_project.js")}}'></script>
 
             {{ elif request.function == "statistics": }}
