--- a/views/default/header.html
+++ b/views/default/header.html
@@ -3,6 +3,16 @@
 {{ person = g_project.projects() }}
 {{ all_projects =  g_project.all_projects()}}
 
+<script>
+    // global variables
+    var url = {
+        delete_project : '{{=URL("delete_project")}}'
+    },
+    msg = {
+        confirmRemove: '{{=T("Are you sure you want to delete this project?")}}'
+    }
+</script>
+
 <div id="header">
     <a href="{{=URL('index')}}" id="logo" alt='Scrumforme Logo' title='Scrumforme Logo'>
       <h1><img src="{{=URL('static', 'img/scrumfor-me.png')}}" alt=""></h1>
@@ -112,21 +122,22 @@
 
           {{for i in all_projects:}}
             <li class="project-card">
-              <a href="{{=URL('product_backlog', args=i.project_id)}}">
+
               <div class="project-card--header">
-                <i class="icon icon-trash icon-project-card-delete" data-pk="666"></i>
+                <i class="icon icon-trash icon-project-card-delete" data-pk={{=i.project_id}}></i>
               </div>
-              <div class="project-card--content">
-                {{ if i.project_id.thumbnail: }}
-                  <img src="{{=URL("static","uploads/%s" %i.project_id.thumbnail)}}" alt="{{=i.project_id.name}}">
-                {{ else: }}
-                  <img src="{{=URL("static","/img/no-image_project.jpg")}}" alt="{{=i.project_id.name}}">
-                {{ pass }}
-                <div class="project-card--content-title">
-                  <p class="project_name trunc">{{=i.project_id.name}}</p>
+              <a href="{{=URL('product_backlog', args=i.project_id)}}">
+                <div class="project-card--content">
+                  {{ if i.project_id.thumbnail: }}
+                    <img src="{{=URL("static","uploads/%s" %i.project_id.thumbnail)}}" alt="{{=i.project_id.name}}">
+                  {{ else: }}
+                    <img src="{{=URL("static","/img/no-image_project.jpg")}}" alt="{{=i.project_id.name}}">
+                  {{ pass }}
+                  <div class="project-card--content-title">
+                    <p class="project_name trunc">{{=i.project_id.name}}</p>
+                  </div>
                 </div>
-              </div>
-              <div class="clear"></div>
+                <div class="clear"></div>
               </a>
             </li>
           {{pass}}
