deleting projects in modal

--- a/views/default/header.html
+++ b/views/default/header.html
@@ -5,10 +5,10 @@
 
 <script>
     // global variables
-    var url = {
+    var headerUrl = {
         delete_project : '{{=URL("delete_project")}}'
     },
-    msg = {
+    headerMsg = {
         confirmRemove: '{{=T("Are you sure you want to delete this project?")}}'
     }
 </script>
