[BUGFIX] modal VS dropdown

--- a/views/default/header.html
+++ b/views/default/header.html
@@ -10,6 +10,9 @@
     },
     headerMsg = {
         confirmRemove: '{{=T("Are you sure you want to delete this project?")}}'
+    },
+    info = {
+      currentPage: '{{ =request.function }}'
     }
 </script>
 
